--- a/astra-child/theme.css
+++ b/astra-child/theme.css
@@ -12,3 +12,23 @@ a {
     display: flex;
 
 }
+
+.menu-link
+
+/*cacher lien ajout auto du theme*/
+    {
+    display: none;
+}
+
+/*image feuille + canette */
+
+
+
+/*canette*/
+
+
+
+/*image de droite*/
+
+
+/*image de gauche*/
